--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -608,7 +608,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
