--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -122,7 +121,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -189,8 +187,11 @@ allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174:1:1:1:1;
+allow 2605:6400:30:f174:1111:2222:3333:4444;
+allow 2605:6400:30:f174::42;
 allow 2605:6400:30:f174:42:42::;
 allow 2605:6400:30:f174:42:42:42:0;
+allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
@@ -242,6 +243,7 @@ allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:f530:8002::19;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
 allow 2620:7:6001::186;
@@ -262,6 +264,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -440,7 +443,6 @@ allow 2a0b:f4c2:1::156;
 allow 2a0b:f4c2:1::157;
 allow 2a0b:f4c2:1::158;
 allow 2a0b:f4c2:1::159;
-allow 2a0b:f4c2:1::160;
 allow 2a0b:f4c2:1::161;
 allow 2a0b:f4c2:1::162;
 allow 2a0b:f4c2:1::163;
@@ -577,7 +579,6 @@ allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
-allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:12d:abcd:f8fe:d2ff:feb0:6d14;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -602,6 +603,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
